--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for the new app icon customization features in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• Wir haben Unterstützung für die neuen Funktionen zur Anpassung von App-Symbolen in iOS 18 hinzugefügt. Wenn du deinen iOS-Home-Bildschirm zum Verwenden dunkler oder getönter Symbole konfigurierst, passt sich Signal entsprechend an. Entscheide dich für ein monochromes Design oder wähle ein Farbschema, das so bunt ist wie deine Fantasie.
