--- a/fastlane/metadata/es-ES/release_notes.txt
+++ b/fastlane/metadata/es-ES/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for the new app icon customization features in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• Hemos hecho que las nuevas funciones incluidas en iOS 18 para personalizar los iconos de las aplicaciones sean compatibles con Signal. Ahora, cuando configures la pantalla de inicio de iOS para usar iconos oscuros o tintados, Signal se adaptará automáticamente. Así que ya puedes ir por un estilo monocromático o elegir la paleta que más te guste. ¡Tu imaginación es el límite!
