--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for the new app icon customization features in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• iOS 18で登場する新しいアプリアイコンカスタマイズ機能のサポートを追加しました。
