--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for the new app icon customization features in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• O Signal agora oferece suporte aos novos recursos de personalização de ícones de apps no iOS 18. Ao configurar sua tela de Início com ícones escuros ou coloridos, o Signal se ajustará automaticamente. Escolha um visual monocromático ou uma paleta que combine com o seu estilo.
