--- a/fastlane/metadata/pt-PT/release_notes.txt
+++ b/fastlane/metadata/pt-PT/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for the new app icon customization features in iOS 18. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• Acrescentámos suporte às novas funcionalidades de personalização de ícones do iOS 18. Agora, ao configurar o ecrã inicial do iOS para usar ícones escuros ou matizados, o Signal adaptar-se-á.
